Updated auth + OTP system + signin module
